architecture-propdevelopment/Task 5/non-admin-api-allow.yaml
# Разделение трафика между UI и API.

---
# Запрещаем все, что не разрешено явно
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: traffic-demo
spec:
  podSelector: {}            # все поды namespace
  policyTypes: [Ingress, Egress]

---
# DNS нужен всем
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: traffic-demo
spec:
  podSelector: {}
  policyTypes: [Egress]
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

---
# Пара обычных сервисов: front-end <-> back-end-api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: non-admin-api-allow
  namespace: traffic-demo
spec:
  podSelector:
    matchLabels:
      role: back-end-api
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: front-end
      ports:
        - protocol: TCP
          port: 80

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: non-admin-ui-allow
  namespace: traffic-demo
spec:
  podSelector:
    matchLabels:
      role: front-end
  policyTypes: [Egress]
  egress:
    - to:
        - podSelector:
            matchLabels:
              role: back-end-api
      ports:
        - protocol: TCP
          port: 80

---
# Пара административных сервисов: admin-front-end <-> admin-back-end-api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-api-allow
  namespace: traffic-demo
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: admin-front-end
      ports:
        - protocol: TCP
          port: 80

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-ui-allow
  namespace: traffic-demo
spec:
  podSelector:
    matchLabels:
      role: admin-front-end
  policyTypes: [Egress]
  egress:
    - to:
        - podSelector:
            matchLabels:
              role: admin-back-end-api
      ports:
        - protocol: TCP
          port: 80
